Fix some lint warnings.